# testtask

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  _orjson.py  api.py  model.py  service.py  wsgi.py
app/storage/: json_storage.py  schema  storagebase.py  tax_bands.json
